assets/css/style.css
/* Font */
@import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");

/* Varibales */
:root {
  --c-brand: #8bbccc;
  --c-brand-rgb: 139, 188, 204;
  --c-dark: #303050;
  --c-body: #636383;
  --f-main: "Bai Jamjuree", sans-serif;
  --transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
  --shadow: 0px 15px 40px rgba(0, 0, 0, 0.1);
}

/* Reset and Helpers */
body {
  font-family: var(--f-main);
  color: var(--c-body);
  line-height: 1.7;
}

h1,
.h1,
h2,
.h2,
h3,
.h3,
h4,
.h4,
h5,
.h5,
h6,
.h6 {
  font-weight: 700;
  color: var(--c-dark);
}

a {
  text-decoration: none;
  color: var(--c-dark);
  transition: var(--transition);
}

a:hover {
  color: var(--c-brand);
}

img {
  width: 100%;
}

.section-padding {
  padding-top: 120px;
  padding-bottom: 120px;
}

.text-brand {
  color: var(--c-brand);
}

.section-title {
  max-width: 560px;
  margin: 0 auto 60px auto;
}

.section-title .line {
  width: 60px;
  height: 2px;
  background-color: var(--c-brand);
  display: inline-block;
}

.section-connector {
  position: relative;
}

.section-connector::after {
  content: "";
  width: 2px;
  height: 100px;
  background-color: var(--c-brand);
  position: absolute;
  top: -50px;
  left: 50%;
}

/* Navbar */
.navbar {
  padding-top: 30px;
  padding-bottom: 30px;
  transition: var(--transition);
}

.navbar.scrolled {
  padding-top: 7px;
  padding-bottom: 7px;
  background-color: white;
  box-shadow: var(--shadow);
}

.navbar-toggler {
  border-radius: 0;
}

.navbar-toggler:focus {
  box-shadow: none;
}

@media (min-width: 992px) {
  .navbar-expand-lg .navbar-nav .nav-link {
    padding-right: 16px;
    padding-left: 16px;
  }
}

.navbar .navbar-nav .nav-link {
  font-weight: 700;
  color: var(--c-dark);
}

.navbar .navbar-nav .nav-link:hover,
.navbar .navbar-nav .nav-link.active {
  color: var(--c-brand);
}

.navbar-brand {
  font-size: 24px;
  font-weight: 700;
  color: var(--c-dark);
}

.social-icon {
  width: 36px;
  height: 36px;
  background-color: var(--c-brand);
  color: white;
  border: 2px solid var(--c-brand);
  display: inline-flex;
  align-items: center;
  justify-content: center;
  margin-right: 6px;
}

.social-icon:hover {
  background-color: transparent;
}

/* Button */
.btn {
  padding: 10px 24px;
  border-radius: 0;
  border-width: 2px;
  font-weight: 500;
}

.btn-brand,
.btn-brand:focus {
  background-color: var(--c-brand);
  color: white;
  border-color: var(--c-brand);
}

.btn-brand:hover {
  background-color: transparent;
  color: var(--c-brand);
  border-color: var(--c-brand);
}

/* Home */
#home {
  background-image: url(../images/hero-section-cover.jpg);
  background-position: center;
  background-size: cover;
}

/* Skills */
.skill-icon {
  width: 60px;
  height: 60px;
  background-color: var(--c-brand);
  color: white;
  font-size: 28px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  border-radius: 10px;
}

/* Services */
.service-icon {
  width: 60px;
  height: 60px;
  background-color: var(--c-brand);
  color: white;
  font-size: 28px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  border-radius: 10px;
}

/* Works */
.project {
  overflow: hidden;
  position: relative;
}

.project .content {
  position: absolute;
  top: 100%;
  left: 0;
  background-color: var(--c-brand);
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.project img,
.project .content {
  transition: var(--transition);
}

.project:hover .content {
  top: 0;
}

.project:hover img {
  transform: translateY(-100%);
}

/* Resume */
.education-experience {
  position: relative;
}

.education-experience::before {
  content: "";
  height: 100%;
  width: 1px;
  background-color: rgba(var(--c-brand-rgb), 0.7);
  position: absolute;
  left: 0;
  top: 0;
}

.education-experience::after {
  content: "";
  width: 14px;
  height: 14px;
  background-color: var(--c-brand);
  position: absolute;
  left: -7px;
  top: 0;
}

/* Contact */
#contact .form-control {
  border-radius: 0;
}

#contact .form-control:focus {
  box-shadow: none;
  border-color: var(--c-brand);
}

#contact input.form-control {
  height: 44px;
}

/* Footer */
footer {
  background-color: var(--c-dark);
  padding-top: 80px;
}

footer h4 {
  color: white;
}

footer p,
footer li,
footer li a {
  color: rgba(255, 255, 255, 0.7);
}

footer ul {
  list-style: none;
  padding: 0;
}

.footer-top {
  padding-bottom: 40px;
  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
}

.footer-bottom {
  padding-top: 40px;
  padding-bottom: 40px;
}

